--- a/.npmignore
+++ b/.npmignore
@@ -15,6 +15,8 @@
 bower_components
 build/Release
 coverage
+docs/
+examples/
 jspm_packages/
 lib-cov
 logs
@@ -22,6 +24,8 @@ node_modules/
 npm-debug.log*
 pids
 storybook-static
+tests/
+tutorials/
 typings/
 yarn-debug.log*
 yarn-error.log*
