--- a/.npmignore
+++ b/.npmignore
@@ -3,27 +3,41 @@
 *.pid.lock
 *.seed
 *.tgz
+.README.md
+.editorconfig
 .env
 .eslintcache
 .grunt
+.idea
 .lock-wscript
 .next
 .node_repl_history
 .npm
 .nyc_output
 .yarn-integrity
+CONTRIBUTING.md
+DEPLOYMENT_STEPS.md
+FLOW.md
+HOWITWORKS.md
+INSTALLATION.md
+USAGE.md
 bower_components
 build/Release
 coverage
 docs/
+eslint.config.mjs
 examples/
+jest.config.js
 jspm_packages/
 lib-cov
 logs
 node_modules/
 npm-debug.log*
 pids
+rollup.config.js
+scripts
 storybook-static
+test
 tests/
 tutorials/
 typings/
