--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,28 +1,16 @@
-# Workflow for building and deploying a static site to GitHub Pages with custom build command
 name: Deploy static site to GitHub Pages
-
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["publish"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
-
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -36,7 +24,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Install dependencies and build docs
-        run: npm install && npm run build:github-docs
+        run: npm install
+      - name: build docs
+        run: npm run build:github-docs
       - name: Disable Jekyll
         run: touch docs/.nojekyll
       - name: List build output contents
@@ -47,8 +37,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs
-
-  # Deployment job
   deploy:
     environment:
       name: github-pages
